Fix spacing on leaderboard table and logo

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -178,7 +178,8 @@ nav:hover {
 
 #logo {
  color: #308db5;
- margin-bottom: 40px;
+ margin-bottom: 27px;
+ margin-top: 45px;
 }
 
 #sub-logo {
@@ -361,15 +362,15 @@ th.title {
   width: 35%;
 }
 
-tr.room {
+tr {
   border: solid 1px #CCCCCC;
 }
 
-tr.room > td {
+tr > td {
   padding: 5px 0;
 }
 
-tr.room:hover > td {
+tr:hover > td {
   background-color: #eeeeee !important;
 }
 
